agregando a la estructura

--- a/vistas/acceso.html
+++ b/vistas/acceso.html
@@ -7,7 +7,7 @@
     <title>Acceso al Sistema </title>
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap-theme.min.css">
-    <link rel="stylesheet" href="css/titulos.css">
+    <link rel="stylesheet" href="css/titulos">
     <link rel="stylesheet" href="css/dise.css">
 </head>
 
@@ -114,7 +114,7 @@
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.4.9/angular.min.js"></script>
     <!--    <script src="js/ui-bootstrap-tpls-1-1-2.min.js"></script>-->
-    <script src="js/accesar.js"></script>
+    <script src="js/controladores/acceso.js"></script>
     <script src="js/jquery-2.1.4.min.js "></script>
 
 
