--- a/vistas/acceso.html
+++ b/vistas/acceso.html
@@ -7,117 +7,114 @@
     <title>Acceso al Sistema </title>
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap-theme.min.css">
-    <link rel="stylesheet" href="css/titulos">
-    <link rel="stylesheet" href="css/dise.css">
+    <link rel="stylesheet" href="../css/titulos.css">
+    <link rel="stylesheet" href="../css/dise.css">
 </head>
 
 <body>
-    <div class="container"></div>
-
-    <!--PARA EL ENCABEZADO -->
-    <center>
-        <img src="img/encabezado.png" class="img-responsive" alt="Imagen responsive">
-    </center>
     <div class="container">
-        <h3> Acceso al Sistema </h3>
-        <br>
-        <br>
 
-        <form role="form" class="form-horizontal">
-
-            <!--PARA EL ACCESO DEL USUARIO-->
-            <div class="form-group has-feedback">
-                <label for="usuario" class="control-label col-md-3">Email:</label>
-                <div class="col-md-6">
-                    <div class="input-group">
-                        <span class="input-group-addon"><i class="glyphicon glyphicon-user"></i></span>
-                        <input type="email" class="form-control" name="email" id="usuario" placeholder="gabriel.quiroz@hidalgo.gob.mx" required="required" />
-                    </div>
-                    <span class="glyphicon form-control-feedback verif"></span>
-                </div>
-            </div>
-
-
-            <!-- PARA EL PASSWORD-->
-            <div class="form-group has-feedback">
-                <label for="password" class="control-label col-md-3">Password:</label>
-                <div class="col-md-6">
-                    <div class="input-group">
-                        <span class="input-group-addon"><i class="glyphicon glyphicon-lock"></i></span>
-                        <input type="text" class="form-control" name="password" id="password" placeholder="gbrlquiroz" required="required" />
-                    </div>
-                    <span class="glyphicon form-control-feedback verif"></span>
-                </div>
-            </div>
+        <!--PARA EL ENCABEZADO -->
+        <center>
+            <img src="../img/encabezado.png" class="img-responsive" alt="Imagen responsive">
+        </center>
+        <div class="container">
+            <h3> Acceso al Sistema </h3>
             <br>
             <br>
 
-            <!--V A L I D A C I O N -->
+            <form role="form" class="form-horizontal">
 
-            <div class="form-group">
-                <button type="button" class="btn btn-success col-md-4 col-md-offset-4" id="ok" name="ok" data-toggle="modal" data-target="">Enviar Datos</button>
-            </div>
-
-            <!-- Modal true -->
-
-            <div class="modal fade" id="modaltrue" role="dialog">
-                <div class="modal-dialog">
-
-                    <!-- Modal content-->
-
-                    <div class="modal-content">
-                        <div class="modal-header">
-                            <button type="button" class="close" data-dismiss="modal">&times;</button>
-                            <h2> Exito! </h2>
+                <!--PARA EL ACCESO DEL USUARIO-->
+                <div class="form-group has-feedback">
+                    <label for="usuario" class="control-label col-md-3">Email:</label>
+                    <div class="col-md-6">
+                        <div class="input-group">
+                            <span class="input-group-addon"><i class="glyphicon glyphicon-user"></i></span>
+                            <input type="email" class="form-control" name="email" id="usuario" placeholder="gabriel.quiroz@hidalgo.gob.mx" required="required" />
                         </div>
-                        <div class="modal-body">
-                            <p>¡Capturaste correctamente los datos!</p>
+                        <span class="glyphicon form-control-feedback verif"></span>
+                    </div>
+                </div>
+
+
+                <!-- PARA EL PASSWORD-->
+                <div class="form-group has-feedback">
+                    <label for="password" class="control-label col-md-3">Password:</label>
+                    <div class="col-md-6">
+                        <div class="input-group">
+                            <span class="input-group-addon"><i class="glyphicon glyphicon-lock"></i></span>
+                            <input type="text" class="form-control" name="password" id="password" placeholder="gbrlquiroz" required="required" />
                         </div>
-                        <div class="modal-footer">
-                            <button type="button" class="btn btn-default" data-dismiss="modal"> Cerrar</button>
+                        <span class="glyphicon form-control-feedback verif"></span>
+                    </div>
+                </div>
+                <br>
+                <br>
+
+                <!--V A L I D A C I O N -->
+
+                <div class="form-group">
+                    <button type="button" class="btn btn-success col-md-4 col-md-offset-4" id="ok" name="ok" data-toggle="modal" data-target="">Enviar Datos</button>
+                </div>
+
+                <!-- Modal true -->
+
+                <div class="modal fade" id="modaltrue" role="dialog">
+                    <div class="modal-dialog">
+
+                        <!-- Modal content-->
+
+                        <div class="modal-content">
+                            <div class="modal-header">
+                                <button type="button" class="close" data-dismiss="modal">&times;</button>
+                                <h2> Exito! </h2>
+                            </div>
+                            <div class="modal-body">
+                                <p>¡Capturaste correctamente los datos!</p>
+                            </div>
+                            <div class="modal-footer">
+                                <button type="button" class="btn btn-default" data-dismiss="modal"> Cerrar</button>
+                            </div>
                         </div>
                     </div>
                 </div>
-            </div>
 
-            <!-- Modal false -->
+                <!-- Modal false -->
 
-            <div class="modal fade" id="modalfalse" role="dialog">
-                <div class="modal-dialog id=tamaño">
+                <div class="modal fade" id="modalfalse" role="dialog">
+                    <div class="modal-dialog id=tamaño">
 
-                    <!-- Modal content-->
+                        <!-- Modal content-->
 
-                    <div class="modal-content">
-                        <div class="modal-header1">
-                            <button type="button" class="close" data-dismiss="modal">&times;</button>
-                            <h2> Error! </h2>
-                            <!--  <div class="alert alert-success hidden" id="success-alert"></div>-->
-                        </div>
-                        <div class="modal-body1">
-                            <p><strong> ¡Ojo: </strong> Capture correctamente sus datos!!</p>
-                        </div>
-                        <div class="modal-footer">
-                            <button type="button" class="btn btn-default" data-dismiss="modal"> Cerrar</button>
+                        <div class="modal-content">
+                            <div class="modal-header1">
+                                <button type="button" class="close" data-dismiss="modal">&times;</button>
+                                <h2> Error! </h2>
+                                <!--  <div class="alert alert-success hidden" id="success-alert"></div>-->
+                            </div>
+                            <div class="modal-body1">
+                                <p><strong> ¡Ojo: </strong> Capture correctamente sus datos!!</p>
+                            </div>
+                            <div class="modal-footer">
+                                <button type="button" class="btn btn-default" data-dismiss="modal"> Cerrar</button>
+                            </div>
                         </div>
                     </div>
                 </div>
-            </div>
-        </form>
+            </form>
+        </div>
+        <!--PARA EL PIE -->
+        <center>
+            <img src="../img/Pie.jpg" class="img-responsive" alt="Imagen responsive">
+        </center>
+
     </div>
-    <!--PARA EL PIE -->
-    <center>
-        <img src="img/Pie.jpg" class="img-responsive" alt="Imagen responsive">
-    </center>
-
-
     <script src="https://code.jquery.com/jquery-2.2.0.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.4.9/angular.min.js"></script>
-    <!--    <script src="js/ui-bootstrap-tpls-1-1-2.min.js"></script>-->
-    <script src="js/controladores/acceso.js"></script>
-    <script src="js/jquery-2.1.4.min.js "></script>
-
-
+    <!--<script src="js/jquery-2.1.4.min.js "></script>-->
+    <script src="../js/controladores/acceso.js"></script>
 </body>
 
 </html>
