Generando el formulario de agendar audiencias

--- a/vistas/agendando.html
+++ b/vistas/agendando.html
@@ -76,6 +76,18 @@
                     <span class="glyphicon form-control-feedback verif"></span>
                 </div>
             </div>
+            <!-- -->
+            <div class="form-group has-feedback">
+                <label for="asignado" class="control-label col-md-3"> Municipio </label>
+                <div class="col-md-6">
+                    <div class="input-group">
+                        <span class="input-group-addon"><i class="glyphicon glyphicon-user"></i></span>
+                        <input type="text" class="form-control" name="asignado" id="asignado" maxlength="50" placeholder="Anote el nombre completo" required="required" />
+                    </div>
+                    <span class="glyphicon form-control-feedback verif"></span>
+                </div>
+            </div>
+
             <!--  -->
             <div class="form-group has-feedback">
                 <label for="asignado" class="control-label col-md-3"> Visita a: </label>
