--- a/vistas/agendando.html
+++ b/vistas/agendando.html
@@ -22,7 +22,7 @@
                 <label for="inventa" class="control-label col-md-3"> Nombre:</label>
                 <div class="col-md-6">
                     <div class="input-group">
-                        <span class="input-group-addon"><i class="glyphicon glyphicon-pencil"></i></span>
+                        <span class="input-group-addon"><i class="glyphicon glyphicon-user"></i></span>
                         <input type="text" class="form-control" name="inventa" id="inventa" maxlength="10" placeholder="XXXXXX" required="required" />
                     </div>
                     <span class="glyphicon form-control-feedback verif"></span>
