--- a/vistas/agendando.html
+++ b/vistas/agendando.html
@@ -36,7 +36,7 @@
                 <label for="asignado" class="control-label col-md-3"> Dependencia </label>
                 <div class="col-md-6">
                     <div class="input-group">
-                        <span class="input-group-addon"><i class="glyphicon glyphicon-user"></i></span>
+                        <span class="input-group-addon"><i class="glyphicon glyphicon-home"></i></span>
                         <input type="text" class="form-control" name="asignado" id="asignado" maxlength="50" placeholder="Anote el nombre completo" required="required" />
                     </div>
                     <span class="glyphicon form-control-feedback verif"></span>
@@ -48,7 +48,7 @@
                 <label for="asignado" class="control-label col-md-3"> Puesto </label>
                 <div class="col-md-6">
                     <div class="input-group">
-                        <span class="input-group-addon"><i class="glyphicon glyphicon-user"></i></span>
+                        <span class="input-group-addon"><i class="glyphicon glyphicon-lock"></i></span>
                         <input type="text" class="form-control" name="asignado" id="asignado" maxlength="50" placeholder="Anote el nombre completo" required="required" />
                     </div>
                     <span class="glyphicon form-control-feedback verif"></span>
@@ -59,7 +59,7 @@
                 <label for="asignado" class="control-label col-md-3"> Teléfono Local </label>
                 <div class="col-md-6">
                     <div class="input-group">
-                        <span class="input-group-addon"><i class="glyphicon glyphicon-user"></i></span>
+                        <span class="input-group-addon"><i class="glyphicon glyphicon-phone-alt"></i></span>
                         <input type="text" class="form-control" name="asignado" id="asignado" maxlength="50" placeholder="Anote el nombre completo" required="required" />
                     </div>
                     <span class="glyphicon form-control-feedback verif"></span>
@@ -70,7 +70,7 @@
                 <label for="asignado" class="control-label col-md-3"> Celular </label>
                 <div class="col-md-6">
                     <div class="input-group">
-                        <span class="input-group-addon"><i class="glyphicon glyphicon-user"></i></span>
+                        <span class="input-group-addon"><i class="glyphicon glyphicon-phone"></i></span>
                         <input type="text" class="form-control" name="asignado" id="asignado" maxlength="50" placeholder="Anote el nombre completo" required="required" />
                     </div>
                     <span class="glyphicon form-control-feedback verif"></span>
@@ -81,7 +81,7 @@
                 <label for="asignado" class="control-label col-md-3"> Municipio </label>
                 <div class="col-md-6">
                     <div class="input-group">
-                        <span class="input-group-addon"><i class="glyphicon glyphicon-user"></i></span>
+                        <span class="input-group-addon"><i class="glyphicon glyphicon-globe"></i></span>
                         <input type="text" class="form-control" name="asignado" id="asignado" maxlength="50" placeholder="Anote el nombre completo" required="required" />
                     </div>
                     <span class="glyphicon form-control-feedback verif"></span>
@@ -105,8 +105,60 @@
                 <p><strong> Breve descripción del asunto a tratar: </strong></p>
                 <textarea class="mitextarea" rows="3" cols="78"></textarea>
             </div>
+            <!--V A L I D A C I O N -->
 
+            <div class="form-group">
+                <button type="button" class="btn btn-success col-md-4 col-md-offset-4" id="ok" name="ok" data-toggle="modal" data-target="">Enviar Datos</button>
+            </div>
+
+            <!-- Modal true -->
+
+            <div class="modal fade" id="modaltrue" role="dialog">
+                <div class="modal-dialog">
+
+                    <!-- Modal content-->
+
+                    <div class="modal-content">
+                        <div class="modal-header">
+                            <button type="button" class="close" data-dismiss="modal">&times;</button>
+                            <h2> Exito! </h2>
+                        </div>
+                        <div class="modal-body">
+                            <p>¡Capturaste correctamente los datos!</p>
+                        </div>
+                        <div class="modal-footer">
+                            <button type="button" class="btn btn-default" data-dismiss="modal"> Cerrar</button>
+                        </div>
+                    </div>
+                </div>
+            </div>
+
+            <!-- Modal false -->
+
+            <div class="modal fade" id="modalfalse" role="dialog">
+                <div class="modal-dialog id=tamaño">
+
+                    <!-- Modal content-->
+
+                    <div class="modal-content">
+                        <div class="modal-header1">
+                            <button type="button" class="close" data-dismiss="modal">&times;</button>
+                            <h2> Error! </h2>
+                            <!--  <div class="alert alert-success hidden" id="success-alert"></div>-->
+                        </div>
+                        <div class="modal-body1">
+                            <p><strong> ¡Ojo: </strong> Capture correctamente sus datos!!</p>
+                        </div>
+                        <div class="modal-footer">
+                            <button type="button" class="btn btn-default" data-dismiss="modal"> Cerrar</button>
+                        </div>
+                    </div>
+                </div>
+            </div>
         </form>
+    </div>
+
+    </form>
     </div>
 
 
