--- a/vistas/acceso.html
+++ b/vistas/acceso.html
@@ -18,7 +18,7 @@
         <center>
             <img src="../img/encabezado.png" class="img-responsive" alt="Imagen responsive">
         </center>
-        <div class="container">
+        <div class="container1">
             <h3> Acceso al Sistema </h3>
             <br>
             <br>
