--- a/vistas/agendando.html
+++ b/vistas/agendando.html
@@ -7,6 +7,8 @@
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap-theme.min.css">
     <link rel="stylesheet" href="../css/titulos.css">
+    <link rel="stylesheet" href="../css/dise.css">
+
 </head>
 
 <body>
@@ -23,7 +25,7 @@
                 <div class="col-md-6">
                     <div class="input-group">
                         <span class="input-group-addon"><i class="glyphicon glyphicon-user"></i></span>
-                        <input type="text" class="form-control" name="inventa" id="inventa" maxlength="10" placeholder="XXXXXX" required="required" />
+                        <input type="text" class="form-control" name="nombre" id="nombre" placeholder="XXXXXX" required="required" />
                     </div>
                     <span class="glyphicon form-control-feedback verif"></span>
                 </div>
@@ -37,7 +39,7 @@
                 <div class="col-md-6">
                     <div class="input-group">
                         <span class="input-group-addon"><i class="glyphicon glyphicon-home"></i></span>
-                        <input type="text" class="form-control" name="asignado" id="asignado" maxlength="50" placeholder="Anote el nombre completo" required="required" />
+                        <input type="text" class="form-control" name="dependencia" id="dependencia" placeholder="" required="required" />
                     </div>
                     <span class="glyphicon form-control-feedback verif"></span>
                 </div>
@@ -49,7 +51,7 @@
                 <div class="col-md-6">
                     <div class="input-group">
                         <span class="input-group-addon"><i class="glyphicon glyphicon-lock"></i></span>
-                        <input type="text" class="form-control" name="asignado" id="asignado" maxlength="50" placeholder="Anote el nombre completo" required="required" />
+                        <input type="text" class="form-control" name="puesto" id="puesto" maxlength="50" placeholder="" required="required" />
                     </div>
                     <span class="glyphicon form-control-feedback verif"></span>
                 </div>
@@ -60,7 +62,7 @@
                 <div class="col-md-6">
                     <div class="input-group">
                         <span class="input-group-addon"><i class="glyphicon glyphicon-phone-alt"></i></span>
-                        <input type="text" class="form-control" name="asignado" id="asignado" maxlength="50" placeholder="Anote el nombre completo" required="required" />
+                        <input type="number" class="form-control" name="local" id="local" placeholder="" required="required" />
                     </div>
                     <span class="glyphicon form-control-feedback verif"></span>
                 </div>
@@ -71,18 +73,18 @@
                 <div class="col-md-6">
                     <div class="input-group">
                         <span class="input-group-addon"><i class="glyphicon glyphicon-phone"></i></span>
-                        <input type="text" class="form-control" name="asignado" id="asignado" maxlength="50" placeholder="Anote el nombre completo" required="required" />
+                        <input type="number" class="form-control" name="cel" id="cel" maxlength="" placeholder="" required="required" />
                     </div>
                     <span class="glyphicon form-control-feedback verif"></span>
                 </div>
             </div>
             <!-- -->
             <div class="form-group has-feedback">
-                <label for="asignado" class="control-label col-md-3"> Municipio </label>
+                <label for="asignado" class="control-label col-md-3"> Localidad </label>
                 <div class="col-md-6">
                     <div class="input-group">
                         <span class="input-group-addon"><i class="glyphicon glyphicon-globe"></i></span>
-                        <input type="text" class="form-control" name="asignado" id="asignado" maxlength="50" placeholder="Anote el nombre completo" required="required" />
+                        <input type="text" class="form-control" name="localidad" id="localidad" maxlength="50" placeholder="Anote el nombre completo" required="required" />
                     </div>
                     <span class="glyphicon form-control-feedback verif"></span>
                 </div>
@@ -94,7 +96,7 @@
                 <div class="col-md-6">
                     <div class="input-group">
                         <span class="input-group-addon"><i class="glyphicon glyphicon-user"></i></span>
-                        <input type="text" class="form-control" name="asignado" id="asignado" maxlength="50" placeholder="Anote el nombre completo" required="required" />
+                        <input type="text" class="form-control" name="visita" id="visita" maxlength="" placeholder="" required="required" />
                     </div>
                     <span class="glyphicon form-control-feedback verif"></span>
                 </div>
@@ -108,7 +110,7 @@
             <!--V A L I D A C I O N -->
 
             <div class="form-group">
-                <button type="button" class="btn btn-success col-md-4 col-md-offset-4" id="ok" name="ok" data-toggle="modal" data-target="">Enviar Datos</button>
+                <button type="button" class="btn btn-success col-md-4 col-md-offset-4" id="audiencia" name="audiencia" data-toggle="modal" data-target=""> Guardar Datos</button>
             </div>
 
             <!-- Modal true -->
@@ -158,14 +160,14 @@
         </form>
     </div>
 
-    </form>
-    </div>
+
 
 
     <script src="https://code.jquery.com/jquery-2.2.0.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.4.9/angular.min.js"></script>
     <script src="js/ui-bootstrap-tpls-1-1-2.min.js"></script>
+    <sript src="../js/controladores/agendando.js"></sript>
 </body>
 
 </html>
