--- a/vistas/agendando.html
+++ b/vistas/agendando.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap-theme.min.css">
     <link rel="stylesheet" href="../css/titulos.css">
-    <link rel="stylesheet" href="../css/dise.css">
+    <link rel="stylesheet" href="../css/dise1.css">
 
 </head>
 
@@ -25,7 +25,7 @@
                 <div class="col-md-6">
                     <div class="input-group">
                         <span class="input-group-addon"><i class="glyphicon glyphicon-user"></i></span>
-                        <input type="text" class="form-control" name="nombre" id="nombre" placeholder="XXXXXX" required="required" />
+                        <input type="text" class="form-control" name="nombre" id="nombre" placeholder="" required="required" />
                     </div>
                     <span class="glyphicon form-control-feedback verif"></span>
                 </div>
@@ -110,7 +110,7 @@
             <!--V A L I D A C I O N -->
 
             <div class="form-group">
-                <button type="button" class="btn btn-success col-md-4 col-md-offset-4" id="audiencia" name="audiencia" data-toggle="modal" data-target=""> Guardar Datos</button>
+                <button type="button" class="btn btn-success col-md-4 col-md-offset-4" id="agenda" name="agenda" data-toggle="modal" data-target=""> Guardar Datos</button>
             </div>
 
             <!-- Modal true -->
@@ -167,7 +167,7 @@
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.4.9/angular.min.js"></script>
     <script src="js/ui-bootstrap-tpls-1-1-2.min.js"></script>
-    <sript src="../js/controladores/agendando.js"></sript>
+    <script src="../js/controladores/agendando.js"></script>
 </body>
 
 </html>
