--- a/vistas/agendando.html
+++ b/vistas/agendando.html
@@ -101,7 +101,7 @@
                     <span class="glyphicon form-control-feedback verif"></span>
                 </div>
             </div>
-
+            <!--hola-->
             <div class="col-lg-offset-3">
 
                 <p><strong> Breve descripción del asunto a tratar: </strong></p>
