--- a/vistas/acceso.html
+++ b/vistas/acceso.html
@@ -19,7 +19,7 @@
             <img src="../img/encabezado.png" class="img-responsive" alt="Imagen responsive">
         </center>
         <div class="container1">
-            <h3> Acceso al Sistema </h3>
+            <h3><strong> Acceso al Sistema</strong></h3>
             <br>
             <br>
 
@@ -104,12 +104,13 @@
                 </div>
             </form>
         </div>
+
         <!--PARA EL PIE -->
         <center>
             <img src="../img/Pie.jpg" class="img-responsive" alt="Imagen responsive">
         </center>
-
     </div>
+
     <script src="https://code.jquery.com/jquery-2.2.0.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.4.9/angular.min.js"></script>
