--- a/vistas/agendando.html
+++ b/vistas/agendando.html
@@ -7,157 +7,177 @@
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap-theme.min.css">
     <link rel="stylesheet" href="../css/titulos.css">
-    <link rel="stylesheet" href="../css/dise1.css">
+    <link rel="stylesheet" href="../css/dise.css">
 
 </head>
 
 <body>
     <div class="container">
-        <h4> Ingrese los siguientes datos </h4>
-        <br>
-        <br>
-        <form role="form" class="form-horizontal">
-
-            <!--PARA EL REGISTRO DE DATOS DEL VISITANTE   -->
-
-            <div class="form-group has-feedback">
-                <label for="inventa" class="control-label col-md-3"> Nombre:</label>
-                <div class="col-md-6">
-                    <div class="input-group">
-                        <span class="input-group-addon"><i class="glyphicon glyphicon-user"></i></span>
-                        <input type="text" class="form-control" name="nombre" id="nombre" placeholder="" required="required" />
-                    </div>
-                    <span class="glyphicon form-control-feedback verif"></span>
-                </div>
-            </div>
+        <center>
+            <img src="../img/encabezado.png" class="img-responsive" alt="Imagen responsive">
+        </center>
 
 
-            <!-- -->
+        <div class="container2">
+            <h4><strong> Ingrese los siguientes datos </strong></h4>
+            <br>
+            <form role="form" class="form-horizontal">
 
-            <div class="form-group has-feedback">
-                <label for="asignado" class="control-label col-md-3"> Dependencia </label>
-                <div class="col-md-6">
-                    <div class="input-group">
-                        <span class="input-group-addon"><i class="glyphicon glyphicon-home"></i></span>
-                        <input type="text" class="form-control" name="dependencia" id="dependencia" placeholder="" required="required" />
-                    </div>
-                    <span class="glyphicon form-control-feedback verif"></span>
-                </div>
-            </div>
-            <!-- -->
+                <!--PARA EL REGISTRO DE DATOS DEL VISITANTE   -->
 
-            <div class="form-group has-feedback">
-                <label for="asignado" class="control-label col-md-3"> Puesto </label>
-                <div class="col-md-6">
-                    <div class="input-group">
-                        <span class="input-group-addon"><i class="glyphicon glyphicon-lock"></i></span>
-                        <input type="text" class="form-control" name="puesto" id="puesto" maxlength="50" placeholder="" required="required" />
-                    </div>
-                    <span class="glyphicon form-control-feedback verif"></span>
-                </div>
-            </div>
-            <!--  -->
-            <div class="form-group has-feedback">
-                <label for="asignado" class="control-label col-md-3"> Teléfono Local </label>
-                <div class="col-md-6">
-                    <div class="input-group">
-                        <span class="input-group-addon"><i class="glyphicon glyphicon-phone-alt"></i></span>
-                        <input type="number" class="form-control" name="local" id="local" placeholder="" required="required" />
-                    </div>
-                    <span class="glyphicon form-control-feedback verif"></span>
-                </div>
-            </div>
-            <!-- -->
-            <div class="form-group has-feedback">
-                <label for="asignado" class="control-label col-md-3"> Celular </label>
-                <div class="col-md-6">
-                    <div class="input-group">
-                        <span class="input-group-addon"><i class="glyphicon glyphicon-phone"></i></span>
-                        <input type="number" class="form-control" name="cel" id="cel" maxlength="" placeholder="" required="required" />
-                    </div>
-                    <span class="glyphicon form-control-feedback verif"></span>
-                </div>
-            </div>
-            <!-- -->
-            <div class="form-group has-feedback">
-                <label for="asignado" class="control-label col-md-3"> Localidad </label>
-                <div class="col-md-6">
-                    <div class="input-group">
-                        <span class="input-group-addon"><i class="glyphicon glyphicon-globe"></i></span>
-                        <input type="text" class="form-control" name="localidad" id="localidad" maxlength="50" placeholder="Anote el nombre completo" required="required" />
-                    </div>
-                    <span class="glyphicon form-control-feedback verif"></span>
-                </div>
-            </div>
-
-            <!--  -->
-            <div class="form-group has-feedback">
-                <label for="asignado" class="control-label col-md-3"> Visita a: </label>
-                <div class="col-md-6">
-                    <div class="input-group">
-                        <span class="input-group-addon"><i class="glyphicon glyphicon-user"></i></span>
-                        <input type="text" class="form-control" name="visita" id="visita" maxlength="" placeholder="" required="required" />
-                    </div>
-                    <span class="glyphicon form-control-feedback verif"></span>
-                </div>
-            </div>
-            <!--hola-->
-            <div class="col-lg-offset-3">
-
-                <p><strong> Breve descripción del asunto a tratar: </strong></p>
-                <textarea class="mitextarea" rows="3" cols="78"></textarea>
-            </div>
-            <!--V A L I D A C I O N -->
-
-            <div class="form-group">
-                <button type="button" class="btn btn-success col-md-4 col-md-offset-4" id="agenda" name="agenda" data-toggle="modal" data-target=""> Guardar Datos</button>
-            </div>
-
-            <!-- Modal true -->
-
-            <div class="modal fade" id="modaltrue" role="dialog">
-                <div class="modal-dialog">
-
-                    <!-- Modal content-->
-
-                    <div class="modal-content">
-                        <div class="modal-header">
-                            <button type="button" class="close" data-dismiss="modal">&times;</button>
-                            <h2> Exito! </h2>
+                <div class="form-group has-feedback">
+                    <label for="nombre" class="control-label col-md-3"> Nombre:</label>
+                    <div class="col-md-6">
+                        <div class="input-group">
+                            <span class="input-group-addon"><i class="glyphicon glyphicon-user"></i></span>
+                            <input type="text" class="form-control" name="nombre" id="nombre" placeholder="Escriba el nombre completo" required="required" />
                         </div>
-                        <div class="modal-body">
-                            <p>¡Capturaste correctamente los datos!</p>
-                        </div>
-                        <div class="modal-footer">
-                            <button type="button" class="btn btn-default" data-dismiss="modal"> Cerrar</button>
-                        </div>
+                        <span class="glyphicon form-control-feedback verif"></span>
                     </div>
                 </div>
-            </div>
 
-            <!-- Modal false -->
 
-            <div class="modal fade" id="modalfalse" role="dialog">
-                <div class="modal-dialog id=tamaño">
+                <!-- -->
 
-                    <!-- Modal content-->
-
-                    <div class="modal-content">
-                        <div class="modal-header1">
-                            <button type="button" class="close" data-dismiss="modal">&times;</button>
-                            <h2> Error! </h2>
-                            <!--  <div class="alert alert-success hidden" id="success-alert"></div>-->
+                <div class="form-group has-feedback">
+                    <label for="dependencia" class="control-label col-md-3"> Dependencia </label>
+                    <div class="col-md-6">
+                        <div class="input-group">
+                            <span class="input-group-addon"><i class="glyphicon glyphicon-home"></i></span>
+                            <input type="text" class="form-control" name="dependencia" id="dependencia" placeholder="" required="required" />
                         </div>
-                        <div class="modal-body1">
-                            <p><strong> ¡Ojo: </strong> Capture correctamente sus datos!!</p>
+                        <span class="glyphicon form-control-feedback verif"></span>
+                    </div>
+                </div>
+
+                <!-- -->
+
+                <div class="form-group has-feedback">
+                    <label for="puesto" class="control-label col-md-3"> Puesto </label>
+                    <div class="col-md-6">
+                        <div class="input-group">
+                            <span class="input-group-addon"><i class="glyphicon glyphicon-lock"></i></span>
+                            <input type="text" class="form-control" name="puesto" id="puesto" maxlength="50" placeholder="" required="required" />
                         </div>
-                        <div class="modal-footer">
-                            <button type="button" class="btn btn-default" data-dismiss="modal"> Cerrar</button>
+                        <span class="glyphicon form-control-feedback verif"></span>
+                    </div>
+                </div>
+
+                <!--  -->
+
+                <div class="form-group has-feedback">
+                    <label for="local" class="control-label col-md-3"> Teléfono Local </label>
+                    <div class="col-md-6">
+                        <div class="input-group">
+                            <span class="input-group-addon"><i class="glyphicon glyphicon-phone-alt"></i></span>
+                            <input type="number" class="form-control" name="local" id="local" placeholder="" required="required" />
+                        </div>
+                        <span class="glyphicon form-control-feedback verif"></span>
+                    </div>
+                </div>
+
+                <!-- -->
+
+                <div class="form-group has-feedback">
+                    <label for="cel" class="control-label col-md-3"> Celular </label>
+                    <div class="col-md-6">
+                        <div class="input-group">
+                            <span class="input-group-addon"><i class="glyphicon glyphicon-phone"></i></span>
+                            <input type="number" class="form-control" name="cel" id="cel" maxlength="" placeholder="" required="required" />
+                        </div>
+                        <span class="glyphicon form-control-feedback verif"></span>
+                    </div>
+                </div>
+
+                <!-- -->
+
+                <div class="form-group has-feedback">
+                    <label for="localidad" class="control-label col-md-3"> Localidad </label>
+                    <div class="col-md-6">
+                        <div class="input-group">
+                            <span class="input-group-addon"><i class="glyphicon glyphicon-globe"></i></span>
+                            <input type="text" class="form-control" name="localidad" id="localidad" maxlength="50" placeholder="Anote el nombre completo" required="required" />
+                        </div>
+                        <span class="glyphicon form-control-feedback verif"></span>
+                    </div>
+                </div>
+
+                <!--  -->
+
+                <div class="form-group has-feedback">
+                    <label for="visita" class="control-label col-md-3"> Visita a: </label>
+                    <div class="col-md-6">
+                        <div class="input-group">
+                            <span class="input-group-addon"><i class="glyphicon glyphicon-user"></i></span>
+                            <input type="text" class="form-control" name="visita" id="visita" maxlength="" placeholder="" required="required" />
+                        </div>
+                        <span class="glyphicon form-control-feedback verif"></span>
+                    </div>
+                </div>
+                <!--hola-->
+                <div class="col-lg-offset-3">
+                    <p><strong> Breve descripción del asunto a tratar: </strong></p>
+                    <textarea class="mitextarea" rows="3" cols="78"></textarea>
+                </div>
+                <br>
+                <br>
+
+                <!--V A L I D A C I O N -->
+
+                <div class="form-group">
+                    <button type="button" class="btn btn-success col-md-4 col-md-offset-4" id="agenda" name="agenda" data-toggle="modal" data-target=""> Guardar Datos</button>
+                </div>
+
+                <!-- Modal true -->
+
+                <div class="modal fade" id="modaltrue" role="dialog">
+                    <div class="modal-dialog">
+
+                        <!-- Modal content-->
+
+                        <div class="modal-content">
+                            <div class="modal-header">
+                                <button type="button" class="close" data-dismiss="modal">&times;</button>
+                                <h2> Exito! </h2>
+                            </div>
+                            <div class="modal-body">
+                                <p>¡Capturaste correctamente los datos!</p>
+                            </div>
+                            <div class="modal-footer">
+                                <button type="button" class="btn btn-default" data-dismiss="modal"> Cerrar</button>
+                            </div>
                         </div>
                     </div>
                 </div>
-            </div>
-        </form>
+
+                <!-- Modal false -->
+
+                <div class="modal fade" id="modalfalse" role="dialog">
+                    <div class="modal-dialog id=tamaño">
+
+                        <!-- Modal content-->
+
+                        <div class="modal-content">
+                            <div class="modal-header1">
+                                <button type="button" class="close" data-dismiss="modal">&times;</button>
+                                <h2> Error! </h2>
+                                <!--  <div class="alert alert-success hidden" id="success-alert"></div>-->
+                            </div>
+                            <div class="modal-body1">
+                                <p><strong> ¡Ojo: </strong> Capture correctamente sus datos!!</p>
+                            </div>
+                            <div class="modal-footer">
+                                <button type="button" class="btn btn-default" data-dismiss="modal"> Cerrar</button>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </form>
+        </div>
+        <!--PARA EL PIE -->
+        <center>
+            <img src="../img/Pie.jpg" class="img-responsive" alt="Imagen responsive">
+        </center>
     </div>
 
 
