--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 
 
 
-        <div class="header">
+        <!-- <div class="header">
             <div class="navbar navbar-default" role="navigation">
                 <div class="container">
                     <div class="navbar-header">
@@ -45,7 +45,7 @@
 
         <div class="container">
             <div ng-view=""></div>
-        </div>
+        </div>-->
 
         <script src="https://code.jquery.com/jquery-2.2.0.min.js"></script>
         <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js"></script>
