--- a/vistas/agendando.html
+++ b/vistas/agendando.html
@@ -31,7 +31,20 @@
                         <li><a href="/agendar">Agendar</a></li>
                         <li><a href="/buscar">Buscar/Seguimiento/Imprimir</a></li>
                     </ul>
-                </div>-->
+                </div>
+ <button type="button" class="btn btn-sample">Agendando</button>
+            <button type="button" class="btn btn-sample">Buscar/Seguimiento/Imprimir</button>-->
+
+
+        <div class="row">
+            <div class="col-md-4">
+                <a href="#" class="btn btn-sample btn-lg btn-block">Agendando</a>
+            </div>
+            <div class="col-md-4">
+                <a href="#" class="btn btn-sample btn-lg btn-block">Buscar/Seguimiento/Imprimir</a>
+            </div>
+        </div>
+
 
 
 
@@ -229,6 +242,7 @@
 
         </form>
     </div>
+
 
     <script src="https://code.jquery.com/jquery-2.2.0.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js"></script>
