--- a/seguimiento.html
+++ b/seguimiento.html
@@ -95,7 +95,7 @@
 
             <!--  -->
             <div class="form-group has-feedback">
-                <label for="local" class="control-label col-xs-3">Teléfonos:</label>
+                <label for="local" class="control-label col-xs-3">Teléfono:</label>
                 <div class="col-xs-3">
                     <div class="input-group">
                         <span class="input-group-addon"><i class="glyphicon glyphicon-phone-alt"></i></span>
